# are-you-up

./: .gitignore  CLAUDE.md  DECISIONS.md  LAB_NOTES.md  README.md  SESSION.md
android/: CLAUDE.md  Makefile  README.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/areyouup/: MainActivity.kt  Prefs.kt  SampleJob.kt
android/app/src/main/java/dev/areyouup/core/: SampleQueue.kt  Store.kt  Syncer.kt  Synthesizer.kt  (+1 more)
android/app/src/main/res/layout/: main.xml
android/app/src/test/java/dev/areyouup/: SampleJobScheduleTest.kt
backend/: CLAUDE.md  Cargo.toml  Makefile  README.md
backend/scripts/: smoke.sh
backend/src/: intervals.rs  lib.rs  main.rs
backend/static/: timeline.html
backend/systemd/: are-you-up.service
backend/tests/: api.rs
docs/superpowers/plans/: 2026-07-10-backend-server.md  2026-07-10-mac-client.md  2026-07-11-android-client.md
docs/superpowers/specs/: 2026-07-10-are-you-up-design.md  2026-07-11-android-client-design.md
mac/: CLAUDE.md  Makefile  Package.swift  README.md  config.json.example
mac/Sources/AreYouUp/: AppDelegate.swift  HistoryStripView.swift  StatusItemController.swift  main.swift
mac/Sources/AreYouUpCore/: Config.swift  IdleTime.swift  Log.swift  Store.swift  Syncer.swift  Timestamps.swift  WallClockIdle.swift
mac/Tests/AreYouUpCoreTests/: ConfigTests.swift  LogTests.swift  StoreTests.swift  SyncerTests.swift  TimestampsTests.swift  WallClockIdleTests.swift
mac/launchd/: com.are-you-up.mac.plist
scripts/: e2e.sh
(+5 files in other folders)
